<resources>
    <string name="app_name">Follow Now!</string>
    <string name="description">Follow Now! is an application that allows a person to visualize the path of another. Install Follow Me Now on two Android phones: each one is able to follow the other and be followed by another. Concerned about where your kids are on the way back from school? Want to know if someone is coming or if it is near? This application is for you!</string>
    <string name="type_number">Enter the phone number from who you want to follow:</string>
    <string name="button_follow">Ask to follow (by SMS)</string>
    <string-array name="minutes_array">
        <item>for 5 min</item>
        <item>for 10 min</item>
        <item>for 15 min</item>
        <item>for 1 min</item>
    </string-array>
    <string name="sending_sms">Sending SMS, please wait...</string>
    <string name="error">Error</string>
    <string name="error_number">Enter a number before ask to follow</string>
    <string name="sms_sent">SMS sent!</string>
    <string name="sms_generic_error">Error when trying to send SMS</string>
    <string name="sms_no_service_error">No service</string>
    <string name="internet_error">No Internet or db server down!</string>

    <string name="stop_follow">Stop follow</string>
    <string name="last_update_never">Last update: (searching...)</string>
    <string name="last_update">Last update:</string>
    <string name="position">Last position:</string>
    <string name="battery">Battery:</string>
    <string name="time_left"/>
    <string name="you_are_being_followed">You are being followed!</string>
    <string name="title_arrived_notification">You are being followed</string>
    <string name="body_arrived_notification">Tap here when you arrived</string>
    <string name="arrived_title">Beautiful</string>
    <string name="arrived_body">Your friend arrived the destination!</string>
    <string name="you_are_not_being_followed_anymore">You are not being followed anymore</string>
    <string name="title_you_are_not_being_followed_anymore">Nobody is following you</string>
    <string name="body_you_are_not_being_followed_anymore">Tap to clean this message</string>
    <string name="accuracy">Accuracy:</string>
    <string name="finish_title">Info</string>
    <string name="finish_body">Your time is up. Press back button and follow again.</string>
    <string name="stop_before">Stop to follow before back...</string>
    <string name="closing">Stopping to follow...</string>
    <string name="no_answer">Searching your friend yet...</string>
    <string name="no_answer_2">Oh God... Where is your friend?</string>
    <string name="no_answer_3">OK, I will give up to search your friend!</string>
    <string name="not_found_title">Warn</string>
    <string name="not_found_body">Your friend was not found. There are several possibilities for that. It could be him does not have the app (ask him to install), he does not have Internet connection now or his mobile is turned off.</string>
    <string name="low_battery">Tip: stop to follow to save your friend\'s battery</string>
    <string name="can_be_followed"> Let anyone follow me</string>
    <string name="close_window">Back</string>

</resources>
