<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/back"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:text="@string/last_update_never"
              android:id="@+id/last_update"
              android:layout_marginTop="5dp"
              android:layout_marginLeft="7dp"
              android:textSize="6pt"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/battery"
              android:id="@+id/battery"
              android:layout_marginLeft="7dp"
              android:textSize="6pt"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/accuracy"
              android:id="@+id/provider"
              android:layout_marginLeft="7dp"
              android:textSize="6pt"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:gravity="left"
                  android:padding="4dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <Button
                android:id="@+id/stop_follow"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:text="@string/stop_follow"/>

        <Button
                android:id="@+id/my_position"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:drawableRight="@drawable/mypos"
                android:text=""/>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/mainlayout"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

        <include layout="@layout/canvasmap" />

    </RelativeLayout>

</LinearLayout>