<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="20dp"
              android:background="@drawable/back"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView android:text="@string/app_name"
              android:textSize="12pt"
              android:textStyle="bold"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/type_number"
              android:textSize="8pt"
              android:layout_marginTop="16dp"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/number_to_follow"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    <Spinner
            android:id="@+id/minutes"
            android:layout_marginTop="5dp"
            android:textSize="8pt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/minutes_array" />

    <Button
            android:id="@+id/button_follow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="@string/button_follow"/>

    <CheckBox android:id="@+id/ableToBeFollowed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:enabled="false"
              android:checked="true"
              android:text="  I can be followed" />

</LinearLayout>